src/test/deca/syntax/valid/blt_float_blt_int.deca
// Description :
// 
//      Test syntaxiquement correct de 2.5<3
// 
// Résultats : 
// 
//      N/A
// 
// Historique : 
// 
//      Créé le 09/06/2023 par gl03

{
    boolean y = 2.5<3;
}

