src/test/deca/syntax/invalid/eq_float_eq_void.deca
// Description :
//
//      Test syntaxiquement incorrect de : 3.5==
//      
// 
// Résultats : 
// 
//      N/A 
//
// Historique :
// 
//    Créé le 09/06/2023 par gl03

{ 
    boolean y = 3.5==; 
}